[library-spring] upgrade to spring boot 2.1M4